--- a/site/includes/layouts/post.njk
+++ b/site/includes/layouts/post.njk
@@ -10,7 +10,7 @@ layout: default
         <div class="mb-12 md:mb-20">
 
             <header>
-                <h1 class="page-title text-3xl md:text-center md:text-5xl lg:text-6xl">{{ title }}</h1>
+                <h1 class="page-title text-gray-100 light-mode:text-black text-3xl md:text-center md:text-5xl lg:text-6xl">{{ title }}</h1>
             </header>
 
             <div class="text-sm md:text-base text-gray-600 flex justify-center">
@@ -20,7 +20,7 @@ layout: default
                 <p class="px-2">—</p>
 
                 <time datetime="{{ date }}">
-                    {{ date | dateDisplay }}
+                    {{ page.date | dateDisplay }}
                 </time>
 
                 {% if tags %}
