--- a/site/includes/components/mobile-nav.njk
+++ b/site/includes/components/mobile-nav.njk
@@ -1,4 +1,4 @@
-<nav id="mobile-nav" class="mobile-nav fixed left-0 top-0 h-screen w-full overflow-y-auto pt-12 bg-purple-900 z-50 md:hidden">
+<nav id="mobile-nav" class="mobile-nav fixed left-0 top-0 h-screen w-full overflow-y-auto pt-12 bg-blue-900 z-50 md:hidden">
 
     <ul>
 
@@ -17,7 +17,7 @@
 
 </nav>
 
-<button id="mobile-nav-toggle" class="mobile-nav-toggle block fixed h-16 w-full bottom-0 flex items-center justify-center font-bold border-none bg-purple-900 text-white z-50 focus:outline-none md:hidden" aria-label="Mobile menu toggle" aria-expanded="false" aria-controls="mobile-nav">
+<button id="mobile-nav-toggle" class="mobile-nav-toggle block absolute h-16 top-0 right-0 pr-4 flex items-center justify-center font-bold border-none bg-blue-900 text-white z-50 focus:outline-none md:hidden" aria-label="Mobile menu toggle" aria-expanded="false" aria-controls="mobile-nav">
 
    <span class="mobile-nav-label mr-2 font-medium">Menu</span>
 
