--- a/site/index.njk
+++ b/site/index.njk
@@ -3,7 +3,7 @@ layout: default
 meta_title: Home
 meta_description: Skeleventy is a beautiful, powerful skeleton boilerplate built with Eleventy and TailwindCSS
 body_class: home
-title: Welcome to Skeleventy!
+title: Hi, I'm Kye!
 ---
 
 <main id="main" class="main inner flex flex-1 flex-col py-10 lg:py-20 focus:outline-none" tabindex="-1">
@@ -14,9 +14,9 @@ title: Welcome to Skeleventy!
 
         <div class="content">
 
-            <p>A skeleton boilerplate built with <a href="https://www.11ty.dev/docs/">Eleventy</a> and <a href="https://tailwindcss.com">TailwindCSS</a>.</p>
+            <p>Things rattling around in my head &#8212; usually related to data, Tableau, Apple and computin’.</p>
 
-            <h2 class="text-3xl">Features</h2>
+            <h2 class="text-3xl">The Latest</h2>
 
             <ul class="mb-12 list-disc pl-4">
                 <li>Build sites faster with the power of Eleventy, TailwindCSS and SCSS</li>
