pre eleventy 11.0 upgrade

--- a/resources/sass/base/_links.scss
+++ b/resources/sass/base/_links.scss
@@ -2,14 +2,14 @@
 //==========  Links ==========//
 
 a {
-    @apply text-purple-900 no-underline transition-all duration-300 ease-out;
+    @apply text-green-1000 no-underline transition-all duration-300 ease-out;
 
     &:not([class]) {
         border-bottom-width: 2px;
-        border-color: #eb5286;
+        border-color: #21e6c1;
 
         &:hover {
-            @apply text-pink-500;
+            @apply text-green-1000;
         }
     }
 }
