--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -3,7 +3,7 @@
 
 // headings
 h1, h2, h3 {
-    @apply font-black leading-tight mt-0 mb-6 text-purple-900;
+    @apply font-black leading-tight mt-0 mb-6 text-green-1000;
 }
 
 .page-title {
