--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,6 +1,8 @@
-<header id="header" class="header bg-blue-900 light-mode:bg-pink-900 flex flex-col md:flex-row md:justify-between items-center p-4 md:p-6">
+<header id="header" class="header bg-blue-975 light-mode:bg-pink-900 flex flex-col md:flex-row md:justify-between items-center p-4 md:p-6">
 
 	{% include "components/logo.njk" %}
 	{% include 'components/nav.njk' %}
 
 </header>
+<subhead id="subhead" class="bg-teal-1000 flex p-2">
+</subhead>
