--- a/site/index.njk
+++ b/site/index.njk
@@ -3,7 +3,7 @@ layout: default
 meta_title: Home
 meta_description: Skeleventy is a beautiful, powerful skeleton boilerplate built with Eleventy and TailwindCSS
 body_class: home
-title: Hi, I'm Kye!
+title: Hello, world!
 ---
 
 <main id="main" class="main inner flex flex-1 flex-col py-10 lg:py-20 focus:outline-none" tabindex="-1">
@@ -14,7 +14,7 @@ title: Hi, I'm Kye!
 
         <div class="content">
 
-            <p>Things rattling around in my head &#8212; usually related to data, Tableau, Apple and computin’.</p>
+            <p>I'm Kye Hittle. These are thoughts rattling around in my head &#8212; usually related to data, Tableau, Apple and computin’.</p>
 
             <h2 class="text-3xl">The Latest</h2>
 
