--- a/site/includes/components/logo.njk
+++ b/site/includes/components/logo.njk
@@ -1,1 +1,1 @@
-<a class="company-logo-link block text-white font-bold text-2xl md:text-3xl hover:text-pink-500" href="/" title="KHIT - Home">KHIT</a>
+<a class="company-logo-link block text-white font-bold text-2xl md:text-3xl hover:text-green-1000" href="/" title="KHIT - Home">KHIT</a>
