--- a/site/includes/components/nav.njk
+++ b/site/includes/components/nav.njk
@@ -6,7 +6,7 @@
 
         <li class="level-1 mb-4 md:mr-4 md:mb-0">
 
-            <a href="{{ item.url | safe }}" class="link font-bold text-white hover:text-pink-500 active:text-pink-500 {% if page.url == item.url %}active text-pink-500{% endif %}
+            <a href="{{ item.url | safe }}" class="link font-bold text-white hover:text-green-1000 active:text-green-1000 {% if page.url == item.url %}active text-green-1000{% endif %}
             "{% if page.url == item.url %} aria-current="page"{% endif %}>{{ item.label }}</a>
 
         </li>
@@ -14,7 +14,7 @@
         {% endfor %}
 
         <li>
-            <a class="inline-block rounded md:ml-2 py-3 px-6 text-white font-bold bg-pink-500 hover:bg-white hover:text-pink-500" href="https://github.com/josephdyer/skeleventy" target="_blank" rel="noopener">Download</a>
+            <a class="inline-block rounded md:ml-2 py-3 px-6 text-white font-bold bg-teal-1000 hover:bg-green-1000 hover:text-white" href="https://github.com/josephdyer/skeleventy" target="_blank" rel="noopener">Download</a>
         </li>
 
     </ul>
